manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  labels:
    app: sample-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: nginx
        image: sample_app
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
        restartPolicy: Always
      - name: mongodb
        image: mongo
        ports:
        - containerPort: 27017


---
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  namespace: default
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  - port: 27017
    potocol: TCP
    targetPort: 27017
  selector:
    app: sample-app
  type: ClusterIP
