manifests/ingress.yml
apiVersion: networking.k8s.io/v1   
kind: Ingress   
metadata:   
  name: example-ingress   
  annotations:   
    nginx.ingress.kubernetes.io/rewrite-target: /   
spec:   
  rules:   
    - host: hello-world.info   
      http:   
        paths:   
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-app
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-app
                port:
                  number: 27017
